# network-components

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.txt  README.md  healthcheck.sh
.github/workflows/: docker.yml  network-docker.yml  traffic-gen-docker.yml
crates/archive-router/: Cargo.toml
crates/archive-router-api/: Cargo.toml
crates/archive-router-api/src/: lib.rs  middleware.rs  server.rs
crates/archive-router-bin/: Cargo.toml
crates/archive-router-bin/src/: cli.rs  main.rs  scheduler.rs  storage_sync.rs
crates/archive-router/src/: dataset.rs  error.rs  lib.rs  router.rs
crates/collector-utils/: Cargo.toml
crates/collector-utils/src/: cli.rs  lib.rs  storage.rs  utils.rs
crates/contract-client/: Cargo.toml
crates/contract-client/abi/: AllocationsViewer.json  GatewayRegistry.json  NetworkController.json  Strategy.json  WorkerRegistration.json
crates/contract-client/examples/: get_active_workers.rs  get_allocations.rs  get_gateways.rs
crates/contract-client/src/: allocations.rs  cli.rs  client.rs  contracts.rs  error.rs  lib.rs  transport.rs  workers.rs
crates/datasets/: Cargo.toml
crates/datasets/src/: data_chunk.rs  dataset_storage.rs  lib.rs
crates/logs-collector/: Cargo.toml
crates/logs-collector/src/: cli.rs  collector.rs  main.rs  server.rs  storage.rs  utils.rs
crates/messages/: Cargo.toml  build.rs
crates/messages/proto/: messages.proto
crates/messages/src/: data_chunk.rs  lib.rs  range.rs  signatures.rs
crates/network-scheduler/: Cargo.toml  config.yml  healthcheck.sh
crates/network-scheduler/src/: assignment.rs  chunks.rs  cli.rs  data_chunk.rs  main.rs  messages.rs  metrics.rs  metrics_server.rs  parquet.rs  prometheus_metrics.rs  scheduler.rs  scheduling_unit.rs  server.rs  signature.rs  storage.rs  worker_registry.rs  worker_state.rs
crates/peer-checker/: Cargo.toml
crates/peer-checker/src/: main.rs
crates/persistent-storage/: Cargo.toml
crates/persistent-storage/src/: crust_client.rs  lib.rs  main.rs
crates/pings-collector/: Cargo.toml
crates/pings-collector/src/: cli.rs  collector.rs  main.rs  server.rs
crates/portal-logs-collector/: Cargo.toml
crates/portal-logs-collector/src/: cli.rs  collector.rs  main.rs  server.rs
crates/query-client/: Cargo.toml  README.md  config.yml
crates/query-client/src/: client.rs  config.rs  http_server.rs  main.rs
crates/query-gateway/: Cargo.toml  README.md  config.yml  healthcheck.sh
crates/query-gateway/src/: allocations.rs  chain_updates.rs  client.rs  config.rs  http_server.rs  main.rs  metrics.rs  network_state.rs  query.rs  scheme_extractor.rs  server.rs  task.rs
crates/router/: Cargo.toml
crates/router-api/: Cargo.toml
crates/router-api/src/: lib.rs  server.rs
crates/router-bin/: Cargo.toml
crates/router-bin/src/: cli.rs  main.rs  metrics.rs  scheduler.rs
crates/router-controller/: Cargo.toml  build.rs
crates/router-controller/benches/: controller.rs
crates/router-controller/proto/: messages.proto
crates/router-controller/src/: atom.rs  controller.rs  data_chunk.rs  lib.rs  messages.rs  range.rs  rate.rs  request_cache.rs  request_tracker.rs  workers_rate.rs
crates/router/src/: cli.rs  config.rs  dataset.rs  error.rs  http_server.rs  lib.rs  libp2p_server.rs  main.rs  metrics.rs  router.rs  scheduler.rs  server.rs  util.rs  worker_registry.rs
crates/router/src/auth/: cache.rs  client.rs  clock.rs  jwt.rs  middleware.rs  mod.rs  singleflight.rs  topkeys.rs
crates/router/src/auth/client/: tests.rs
crates/router/src/auth/middleware/: tests.rs
scripts/: check_workers_reachability.py  chunks_summary.py  scheduling_simulation.py  worker_status.py
scripts/traffic_generator/: Dockerfile  config.json  requirements.txt  traffic_generator.py
scripts/traffic_generator/query_templates/: ian_query.json  query_sol.json  solana_empty.json  the_query.json
scripts/traffic_generator/query_templates/ethereum/: all_logs_and_logs+tx_regression.json  create_result_address_filtering.json  empty_filter.json  logs_from_transaction_and_request.json  nonce_filtering.json  subtraces.json  trace_parents.json  transaction_logs_for_traces.json  transaction_traces.json
scripts/traffic_generator/query_templates/evm/: all_logs_and_logs+tx_regression.json  empty_filter.json  include_all_blocks.json  load_all_tx_and_logs.json  logs_from_transaction_and_request_slow.json  nonce_filtering.json  sighash_filtering.json  sync.py  topics_filtering.json  transaction_logs_for_logs.json
scripts/traffic_generator/query_templates/moonbeam/: event_call_stack.json  evm_logs_query.json  include_all_blocks.json  simple_event_query.json
scripts/traffic_generator/query_templates/solana/: include_all_blocks.json
scripts/traffic_generator/query_templates/substrate/: call_relations.json  call_subcalls.json  event_relations.json  simple_call_query.json
