[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "e0f02c0",  version = "1.2.0" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "e0f02c0", version = "2.0.1", features = ["bitstring"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "e0f02c0", version = "3.0.0" }
