[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "292e67f",  version = "1.3.0" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "292e67f", version = "2.1.0", features = ["bitstring"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "292e67f", version = "3.1.0" }
