[package]
name = "archive-router-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-router = { version = "0.1", path = "../archive-router" }
axum = "0.5.17"
axum-macros = "0.2.3"
hyper = "0.14.20"
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1"
