[package]
name = "archive-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2.1", features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
