[package]
name = "collector-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clickhouse = "0.12"
lazy_static = "1"
log = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11"
serde_repr = "0.1"

contract-client = { workspace = true }
subsquid-messages = { workspace = true }

[dev-dependencies]
test-with = "0.13"
subsquid-network-transport = { workspace = true }
tokio = { version = "1", features = ["full"] }
