[package]
name = "contract-client"
version = "0.1.3"
edition = "2021"

[dependencies]

async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
ethers = { version = "2", features = ["ws"] }
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
url = "2"

subsquid-network-transport = { git = "ssh://git@github.com/subsquid/subsquid-network.git", rev = "3075211" }

[dev-dependencies]
anyhow = "1"
simple_logger = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
