[package]
name = "logs-collector"
version = "1.0.12"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
rand = "0.8.5"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

sqd-contract-client = { workspace = true }
sqd-messages = { workspace = true }
sqd-network-transport = { workspace = true, features = ["logs-collector"] }

collector-utils = { path = "../collector-utils" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
