[package]
name = "subsquid-messages"
version = "0.1.0"
edition = "2021"

[features]
signatures = ["subsquid-network-transport"]

[dependencies]
anyhow = "1"
hex = { version = "0.4", features = ["serde"] }
prost = "0.12"
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"

subsquid-network-transport = { git = "ssh://git@github.com/subsquid/subsquid-network.git", rev = "c083749", optional = true }

[build-dependencies]
prost-build = "0.12"
