[package]
name = "network-scheduler"
version = "0.2.12"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
axum = { version = "0.6", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
derive-enum-from-into = "0.1"
env_logger = "0.10"
futures = "0.3"
hex = "0.4"
iter_num_tools = "0.7"
itertools = "0.12"
lazy_static = "1"
log = "0.4"
nonempty = { version = "0.9", features = ["serde", "serialize"] }
prometheus-client = "0.22"
rand = "0.8"
random_choice = "0.3"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
serde_yaml = "0.9"
sha3 = "0.10"
tokio = { version = "1", features = ["full"] }

contract-client = { version = "0.1", path = "../contract-client" }
subsquid-messages = { version = "0.1", path = "../messages", features = ["semver", "signatures"] }
subsquid-network-transport = { version = "0.1", path = "../../subsquid-network/transport", features = ["metrics"] }
