[package]
name = "network-scheduler"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = "0.4.38"
clap = { version = "4", features = ["derive", "env"] }
crypto_box = "0.9.1"
curve25519-dalek = "4.1.3"
dashmap = { version = "6", features = ["serde"] }
derive-enum-from-into = "0.1"
env_logger = "0.11"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
hmac = "0.12.1"
iter_num_tools = "0.7"
itertools = "0.13"
lazy_static = "1.4.0"
log = "0.4"
nonempty = { version = "0.10", features = ["serde", "serialize"] }
num_cpus = "1"
once_cell = "1"
parking_lot = { version = "0.12", features = ["serde"] }
prometheus-client = "0.22"
rand = "0.8"
random_choice = "0.3"
semver = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde-partial = "0.3"
serde_with = { version = "3", features = ["base64", "hex"] }
serde_yaml = "0.9"
sha2 = "0.10.8"
sha3 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"

sqd-contract-client = { workspace = true }
sqd-messages = { workspace = true, features = ["semver"] }
sqd-network-transport = { workspace = true, features = ["scheduler", "metrics"] }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
