[package]
name = "peer-checker"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

sqd-contract-client = { workspace = true }
sqd-messages = { workspace = true }
sqd-network-transport = { workspace = true, features = ["peer-checker"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"