[package]
name = "persistent-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ipfs-api = "0.17.0"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.11", features = ["multipart", "json"] }
ethers = "2.0.8"
ethers-core = "2.0.8"
ethers-signers = "2.0.8"
base64 = "0.21.2"
serde = "1.0.171"
thiserror = "1.0.43"
