[package]
name = "pings-collector"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clickhouse = "0.12"
env_logger = "0.11"
futures = "0.3"
lazy_static = "1"
log = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }

contract-client = { workspace = true }
subsquid-messages = { workspace = true }
subsquid-network-transport = { workspace = true, features = ["pings-collector"] }

collector-utils = { path = "../collector-utils" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
test-with = "0.13"
