[package]
name = "pings-collector"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clickhouse = "0.12"
env_logger = "0.11"
futures = "0.3"
lazy_static = "1"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
yaque = "0.6"

contract-client = { workspace = true }
subsquid-messages = { workspace = true }
subsquid-network-transport = { workspace = true, features = ["pings-collector"] }

collector-utils = { path = "../collector-utils" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
