[package]
name = "pings-collector"
version = "2.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clickhouse = "0.12"
env_logger = "0.11"
futures = "0.3"
lazy_static = "1"
log = "0.4"
parking_lot = "0.12"
semver = "1"
tokio = { version = "1", features = ["full"] }

sqd-contract-client = { workspace = true }
sqd-messages = { workspace = true }
sqd-network-transport = { workspace = true, features = ["pings-collector"] }

collector-utils = { path = "../collector-utils" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
