[package]
name = "portal-logs-collector"
version = "1.0.4"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures-03"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

sqd-contract-client = { workspace = true }
sqd-messages = { workspace = true }
sqd-network-transport = { workspace = true, features = ["portal-logs-collector", "request-server", "proto"] }

collector-utils = { path = "../collector-utils" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
