[package]
name = "query-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
prost = "0.11"
simple_logger = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-std"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

grpc-libp2p = { version = "0.1", path = "../../../subsquid-network/grpc-libp2p"}
router-controller = { version = "0.1", path = "../router-controller" }
