[package]
name = "query-gateway"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
derivative = "2"
duration-string = { version = "0.3", features = ["serde"] }
env_logger = "0.10"
flate2 = "1"
futures = "0.3"
log = "0.4"
prost = "0.11"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tabled = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version  = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

subsquid-network-transport = { version = "0.1", path = "../../subsquid-network/transport" }
router-controller = { version = "0.1", path = "../router-controller" }
contract-client = { version = "0.1", path = "../contract-client"}
