[package]
name = "query-gateway"
version = "0.2.12"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
derivative = "2"
duration-string = { version = "0.3", features = ["serde"] }
env_logger = "0.11"
flate2 = "1"
futures = "0.3"
lazy_static = "1"
log = "0.4"
prometheus = "0.13"
rand = "0.8"
rusqlite = { version = "0.30", features = ["trace", "bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_yaml = "0.9"
tabled = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rusqlite = "0.5"
uuid = { version = "1", features = ["v4", "fast-rng"] }

contract-client = { version = "0.1", path = "../contract-client" }
subsquid-messages = { version = "0.1", path = "../messages", features = ["semver", "signatures"] }
subsquid-network-transport = { version = "0.1", path = "../../subsquid-network/transport" }
