[package]
name = "archive-router-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-router = { version = "0.1", path = "../router" }
archive-router-api = { version = "0.1", path = "../router-api" }
archive-router-controller = { version = "0.1", path = "../router-controller" }
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
url = "2.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "json"] }
libc = "0.2"
lazy_static = "1.4.0"
