[package]
name = "router-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
parking_lot = "0.12"
prost = "0.11"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"

[build-dependencies]
prost-build = "0.11"
