[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
axum = "0.6"
axum-macros = "0.3"
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
url = "2.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "json"] }
libc = "0.2"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }

router-controller = { version = "0.1", path = "../router-controller" }
sqd-messages = { workspace = true } # FIXME: Remove this dependency
